# paintify-books

./: .env.sample  README.md  auth.py  books.json  main.py  pyproject.toml
books/alice-in-wonderland/: 0.txt  1.txt
books/david-copperfield/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt
books/robinson-crusoe/: 0.txt  1.txt  2.txt  3.txt
vlm/: README.md  frame_extractor.py  video_converter.py
